# sample-poetry-project

./: pyproject.toml
sample_poetry_project/: __init__.py
