[tool.poetry]
name = "sample-poetry-project"
version = "0.1.0"
description = ""
authors = ["Javier Tinoco Diaz <jtinocod@yahoo.com>"]
readme = "README.md"
packages = [{include = "sample_poetry_project"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
